enumcapsulate/tests/derive-tests/from/fail/union.err.txt
error: Only enums can use this derive
 --> /tests/derive-tests/from/fail/union.rs:4:11
  |
4 | pub union Union {
  |           ^^^^^
